slim tomcat7 size, add to suport offline, local mirror build